<resources>
    <string name="app_name">Wasabee</string>
    <string name="welcome">Welcome to Wasabee!</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_requirements">*Note: the password has to be at least 7 characters long</string>
    <!-- Looks like we won't be needing these bois for a while (I mean.. I just can't find a way to make them work)
    <string name="oh_no_how_did_this_happen">duck.</string>
    <string name="server_request_error">Error occurred while getting server request. Please check your connection and try again</string> -->
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="forward">Forward</string>
    <string name="new_chat">New chat</string>
    <string name="next">Next</string>
    <string name="group_name">Group name</string>
    <string name="create_chat">Create chat</string>
    <string name="enter_message">Enter message</string>
    <string name="send_message">send</string>
    <string name="chat_info">Chat info</string>
    <string name="ok">Ok</string>
    <string name="back_to_chats">Go back to chats</string>
    <string name="preference_file_key">spb.summer_practice.wasabee.preference_file</string>
</resources>
