<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenuActivity">

    <Button
            android:text="@string/friends"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/friendButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            app:layout_constraintStart_toEndOf="@+id/chatsButton"
            app:layout_constraintTop_toTopOf="@+id/chatsButton"/>
    <Button
            android:text="@string/cart"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/cartButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/settingsButton"
            android:layout_marginBottom="400dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/chatsButton"/>
    <Button
            android:text="@string/settings"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/settingsButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            app:layout_constraintStart_toEndOf="@+id/cartButton"
            app:layout_constraintTop_toTopOf="@+id/cartButton"/>
    <Button
            android:text="@string/chats"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/chatsButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/friendButton"
            android:layout_marginTop="70dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/cartButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>