<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/LayoutStyle"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            style="@style/TextStyle"
            android:gravity="start"
            android:id="@+id/edittext_password_login"
            android:hint="@string/password" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_username_login" android:textSize="25sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            style="@style/TextStyle"
            android:gravity="start"
            android:id="@+id/edittext_username_login"
            android:hint="@string/username" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="1dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="300dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="25sp"/>
    <Button
            android:text="@string/login"
            android:layout_width="300dp"
            android:layout_height="150dp"
            style="@style/ButtonStyleDark"
            android:id="@+id/loginButton_login" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password_login" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="70dp"
            android:textSize="40sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>